--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -208,7 +208,7 @@ p:last-child {
   justify-content: center;
   width: 100%;
   height: 240px;
-  background-image: url(../img/img-activities.jpg);
+  background-image: url(../img/teambuilding.jpg);
   margin-bottom: 68px;
   position: relative;
 }
