--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -251,6 +251,12 @@ p:last-child {
 .tm-activity-img-container {
   width: 180px;
   height: 180px;
+  object-fit: contain;
+}
+.tim-activity-img-container img{
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
 
 .tm-company-section {
